# cerebellum-cua

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  BENCHMARKS.md  INSTALL.md  MEDIA.md  MODES.md  PROTOCOL.md  TUTORIALS.md
docs/assets/clips/: manifest.json
docs/superpowers/plans/: 2026-06-20-cua-self-demo.md
docs/superpowers/specs/: 2026-06-20-cua-self-demo-design.md
examples/tutorials/: gedit_basics.json  gedit_drive.json
packaging/selinux/: cerebellum_atspi.te
packaging/sudoers/: cerebellum-cua.template
rig/: Containerfile  session.sh  stream.sh
scripts/: assemble_demo.py  benchmark_tokens.py  probe_flow.py  record-demo.sh  record_tutorial.py  run-tutorial.py  run-vm.sh  setup-linux.sh  stream-vm.sh
sql/: README.md
src/cerebellum_cua/: __init__.py  config.py  envconfig.py  errors.py  legend.py  model.py
src/cerebellum_cua/capture/: __init__.py  _atspi_input.py  _motion.py  _xdotool.py  _ydotool.py  abort.py  base.py  driver.py  input.py  screenshot.py  uia_backend.py
src/cerebellum_cua/capture/atspi/: __init__.py  _actions.py  _adapter.py  _convert.py  _predicate.py  _reacquire.py  _text.py  backend.py  roles.py
src/cerebellum_cua/capture/vision/: __init__.py  _ascii.py  _classify.py  _extract.py  _layout.py  backend.py  detect.py
src/cerebellum_cua/cli/: __init__.py  __main__.py  engine.py  handlers.py  invoke.py  modes.py  repl.py  representation.py  verify.py
src/cerebellum_cua/compose/: __init__.py  annotate.py
src/cerebellum_cua/desktop/: __init__.py  _x11.py  windows.py
src/cerebellum_cua/elevation/: __init__.py  base.py  detect.py  polkit.py  sudo.py  uac.py
src/cerebellum_cua/events/: __init__.py  coalescer.py  manager.py
src/cerebellum_cua/gateway/: __init__.py  _hydrate.py  accordion.py  budget.py  protocol.py  tokens.py
src/cerebellum_cua/matrix/: __init__.py  builder.py  diff.py  identity.py
src/cerebellum_cua/mcp/: __init__.py  __main__.py  _tools.py  server.py
src/cerebellum_cua/media/: __init__.py  __main__.py  edit.py  errors.py  events.py  probe.py  transcript.py
src/cerebellum_cua/semantics/: __init__.py  _rules.py  mappings.py
src/cerebellum_cua/skills/: __init__.py  builtin.py  resolver.py
src/cerebellum_cua/storage/: __init__.py  _rowmap.py  _sqlite_ddl.py  base.py  postgres.py  sqlite.py
src/cerebellum_cua/storage/schema/: __init__.py  cerebellum_cua_v42_schema.sql
src/cerebellum_cua/tutorial/: __init__.py  captions.py  clips.py  errors.py  runner.py  spec.py  tokens.py
src/cerebellum_cua/uia/: __init__.py  _predicate_rules.py  client.py  patterns.py  predicate.py  resolver.py  stabilize.py  traversal.py
tests/unit/: test_abort.py  test_accordion.py  test_atspi_actions.py  test_atspi_backend.py  test_benchmark.py  test_budget.py  test_builder.py  test_coalescer.py  test_compose.py  test_diff.py  test_elevation.py  test_engine.py  test_envconfig.py  test_event_manager.py  test_identity.py  test_input.py  test_legend.py  test_mappings.py  test_mcp_server.py  test_media.py  test_modes.py  test_motion.py  test_predicate.py  test_protocol.py  test_screenshot.py  test_skills.py  test_storage_sqlite.py  test_tokens.py  test_tutorial.py  test_tutorial_captions.py  test_tutorial_clips.py  test_tutorial_runner.py  test_tutorial_tokens.py  test_uia_backend.py  test_verify.py  test_vision_backend.py  test_vision_detect.py  test_window_state.py
