[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebellum-cua"
version = "0.1.0"
description = "Captures the OS accessibility tree (Windows UIA / Linux AT-SPI) into a versioned relational matrix and serves it to agents over a token-bounded JSONL protocol, without screenshots."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "accessibility",
    "computer-use",
    "agent",
    "automation",
    "uia",
    "at-spi",
    "a11y",
    "rpa",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "PyJWT>=2.8",
]

[project.urls]
Homepage = "https://github.com/deucebucket/cerebellum-cua"
Repository = "https://github.com/deucebucket/cerebellum-cua"
Issues = "https://github.com/deucebucket/cerebellum-cua/issues"

[project.optional-dependencies]
# Windows-only live UIA capture. Not installable/testable on Linux.
uia = ["uiautomation>=2.0", "comtypes>=1.2"]
# Postgres production backend.
postgres = ["psycopg2-binary>=2.9"]
# MCP server wrapper (exposes the five operations as MCP tools).
mcp = ["mcp>=1.0"]
# Vision capture backend: derive structured elements from a screenshot for apps
# without accessibility. Also requires the SYSTEM `tesseract-ocr` binary on PATH
# (e.g. `apt install tesseract-ocr` / `dnf install tesseract`) — the Python
# `pytesseract` wheel is only a thin wrapper around it.
vision = ["opencv-python-headless>=4.8", "pytesseract>=0.3"]
# Adjacent media pipeline: optional audio-transcript backend. The `ffmpeg` and
# `ffprobe` binaries this module shells out to are SYSTEM tools (install FFmpeg),
# not Python packages, so they are not listed here.
media = ["faster-whisper>=1.0"]
# User-takeover kill-switch: read Linux evdev devices to detect real user input
# during synthetic motion. Linux-only; needs read access to /dev/input (user in
# the `input` group). Optional — without it the kill-switch degrades to a no-op.
input = ["evdev>=1.6"]
# Dev / test tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
cerebellum-cua = "cerebellum_cua.cli.__main__:main"
cerebellum-cua-mcp = "cerebellum_cua.mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cerebellum_cua.storage.schema" = ["*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "windows: requires a live Windows UIA host (skipped on Linux CI)",
    "postgres: requires a running PostgreSQL instance",
    "benchmark: performance gate, not run by default",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["cerebellum_cua"]
mypy_path = "src"
ignore_missing_imports = true
